# monkey-rs

./: Cargo.toml  README.md  justfile
.github/workflows/: pages.yml  tests.yml
crates/monkey-compiler/: Cargo.toml
crates/monkey-compiler-repl/: Cargo.toml
crates/monkey-compiler-repl/src/: main.rs
crates/monkey-compiler/benches/: compiler.rs
crates/monkey-compiler/src/: builtin.rs  code.rs  compiler.rs  lib.rs  objects.rs  vm.rs
crates/monkey-core/: Cargo.toml
crates/monkey-core/benches/: fibonacci.rs  parse.rs
crates/monkey-core/src/: ast.rs  builtin.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  objects.rs  parser.rs  token.rs
crates/monkey-eval/: Cargo.toml
crates/monkey-eval-repl/: Cargo.toml
crates/monkey-eval-repl/src/: main.rs
crates/monkey-eval/benches/: eval.rs
crates/monkey-eval/src/: environment.rs  evaluator.rs  lib.rs  objects.rs
crates/monkey-repl/: Cargo.toml
crates/monkey-repl/src/: main.rs
examples/monkey-wasm/: Cargo.toml  README.md  index.html
examples/monkey-wasm/src/: lib.rs
src/: ast.rs  builtin.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  objects.rs  parser.rs  repl.rs  token.rs
