[workspace]
members = [
    "crates/monkey-core",
    "crates/monkey-eval",
    "crates/monkey-compiler",
    "crates/monkey-eval-repl",
    "crates/monkey-compiler-repl",
    "examples/monkey-wasm",
]
# Only check / build main crates by default (check all with `--workspace`)
default-members = [
    "crates/monkey-core",
    "crates/monkey-eval",
    "crates/monkey-compiler",
    "crates/monkey-eval-repl",
    "crates/monkey-compiler-repl",
]
resolver = "2"

[workspace.dependencies]
 derive_more = { version = "2.1.1", features = ["display", "debug"] }
 miette = {version = "7", features = ["fancy"] }
 thiserror = { version = "2" }
