[package]
name = "monkey-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
 js-sys = "0.3.77"
 miette = { workspace = true }
 monkey-eval = { path = "../../crates/monkey-eval" }
 monkey-core = { path = "../../crates/monkey-core" }
 wasm-bindgen = "0.2.100"
